--- a/src/index.css
+++ b/src/index.css
@@ -77,98 +77,9 @@ top nav and swiper css
     width: 355px;
   }
 }
-/* top nav css animation start */
+/* top nav css animation end */
 
-/* Banner swiper Carousel CSS style */
-/* .swiper-pagination-bullet {
-  width: 20px !important;
-  height: 20px !important;
-  background-color: #1d1f20 !important;
-}
-.swiper-pagination-bullet-active {
-  background-color: #27477d !important;
-  border: 2px solid #00accf !important;
-} */
-
-.swiper-button-next,
-.swiper-button-prev {
-  --swiper-navigation-color: #1d1f20 !important;
-}
-
-@media only screen and (max-width: 640px) {
-  .carousel-appoint-btn {
-    padding: 0 10px;
-  }
-  .carousel-seemore-btn {
-    padding: 0 16px;
-  }
-  .carousel-top-space {
-    top: 50%;
-  }
-  .carousel-h1-tag {
-    font-size: 20px;
-  }
-}
-
-.content__container__list {
-  position: absolute;
-  list-style-type: none;
-  margin-left: 43%;
-  animation-name: trans;
-  animation-duration: 20s;
-  animation-iteration-count: infinite;
-  margin-top: 0px;
-}
-@keyframes opacity {
-  0%,
-  50% {
-    opacity: 0;
-    color: #1d1f20;
-  }
-}
-@keyframes trans {
-  0%,
-  14.66% {
-    transform: translateY(0%);
-  }
-  16.66%,
-  31.32% {
-    transform: translateY(-25%);
-  }
-  33.32%,
-  47.98% {
-    transform: translateY(-50%);
-  }
-  49.98%,
-  64.64% {
-    transform: translateY(-75%);
-  }
-  66.64%,
-  81.30% {
-    transform: translateY(-50%);
-  }
-  83.30%,
-  97.96% {
-    transform: translateY(-25%);
-  }
-}
-.changing h1 span::before {
-  content: "";
-  color: #27477d;
-  animation: profile 5s infinite;
-}
-@keyframes profile {
-  0% {
-    content: "Dental Bonding";
-  }
-  50% {
-    content: "Teeth Cleanings";
-  }
-  100% {
-    content: "Root Canal Therapy";
-  }
-}
-/* ####### Banner Background Image ####### */
+/* Banner Background Image */
 .bannerBG-1 {
   background-image: url("./assets/banner/banner1.jpg");
   background-position: center center;
@@ -177,7 +88,7 @@ top nav and swiper css
 }
 @media (max-width: 600px) {
   .bannerBG-1 {
-    background-image: url("./assets/banner/banner2.jpg");
+    background-image: url("./assets/banner/banner1.jpg");
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -189,49 +100,43 @@ top nav and swiper css
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 @media (max-width: 600px) {
   .bannerBG-2 {
-    background-image: url("./assets/background/bannerBg/mobile-banner-bg-1.png");
+    background-image: url("./assets/banner/banner3.jpg");
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
   }
 }
 
-/* doctorlistcard css */
-.doctorListBG {
-  background-image: url("./assets/slider/slider (3).jpeg");
-  background-size: cover;
+.bannerBG-3 {
+  background-image: url("./assets/banner/banner2.jpg");
   background-position: center center;
   background-repeat: no-repeat;
+  background-size: cover;
 }
-
-.blue:hover {
-  background: blue;
-}
-
-.green:hover {
-  background: green;
-}
-
-.red:hover {
-  background: red;
-}
-.colorChange:hover {
-  background-color: blueviolet;
-}
-
-.banner-zoom {
-  animation: slideInRight 0.5s forwards;
-}
-
-@keyframes slideInRight {
-  0% {
-    transform: translateX(100%);
-    opacity: 0;
+@media (max-width: 600px) {
+  .bannerBG-3 {
+    background-image: url("./assets/banner/banner2.jpg");
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
+}
+
+.bannerBG-4 {
+  background-image: url("./assets/banner/banner4.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media (max-width: 600px) {
+  .bannerBG-4 {
+    background-image: url("./assets/banner/banner4.jpg");
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 }
