--- a/src/index.css
+++ b/src/index.css
@@ -140,3 +140,18 @@ top nav and swiper css
     background-size: cover;
   }
 }
+
+.banner-zoom {
+  animation: slideInRight 0.5s forwards;
+}
+
+@keyframes slideInRight {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
