--- a/src/index.css
+++ b/src/index.css
@@ -142,16 +142,15 @@ top nav and swiper css
 }
 
 .banner-zoom {
-  animation: slideInRight 0.5s forwards;
+  animation: scale 1s forwards;
 }
 
-@keyframes slideInRight {
+@keyframes scale {
   0% {
-    transform: translateX(100%);
-    opacity: 0;
+    transform: scale(0);
   }
+
   100% {
-    transform: translateX(0);
-    opacity: 1;
+    transform: scale(1);
   }
 }
